force-app/main/default/objects/Account/fields/Contact_Count_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count_Rollup__c</fullName>
    <label>Contact Count Rollup</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>