force-app/main/default/objects/Account/fields/Has_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Has_Closed_Won_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Closed Won Opportunities</label>
    <type>Checkbox</type>
</CustomField>