force-app/main/default/objects/Account/fields/Total_VIP_Contacts_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_VIP_Contacts_Number__c</fullName>
    <label>VIP Contacts Total Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>